--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,44 @@
-*.iml
-.gradle
-/local.properties
-/.idea/caches
-/.idea/libraries
-/.idea/modules.xml
-/.idea/workspace.xml
-/.idea/navEditor.xml
-/.idea/assetWizardSettings.xml
+# Windows thumbnail db
+Thumbs.db
+
+# OSX files
 .DS_Store
-/build
-/captures
-.externalNativeBuild
-.cxx
+
+# built application files
+*.apk
+*.ap_
+
+# files for the dex VM
+*.dex
+  
+# Java class files
+*.class
+  
+# generated files
+bin/
+gen/
+build/*
+  
+# Local configuration file (sdk path, etc)
+local.properties
+key.properties
+  
+# Eclipse project files
+.classpath
+.project
+  
+# Android Studio
+.idea
+.gradle
+/*/local.properties
+/*/out
+/*/*/build/*
+build
+/*/*/production
+/app/release
+*.iml
+*.iws
+*.ipr
+*~
+*.swp
+bfg.jar
